# Plex-TV-Show-File-Formatter

./: .gitignore  README.md  file-rename.py  setup.cfg
.github/workflows/: pylint.yml
Plex-TV-Show-File-Formatter/: plex-rename.py
plex_formatter/: plex_rename.py
