[metadata]
name = Plex TV Show File Formatter
version = 1.0.0
description = Renames an orded directory of a TV season into Plexs' preferred format
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Kayne
author_email = matthewkayne2004@gmail.com
url = https://github.com/matthewkayne/Plex-TV-Show-File-Formatter

[options]
packages = find:
python_requires = >=3.7